--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <!-- Chat Box -->
         <div class="chat-box" id="chat-box">
             <div class="message received">
-                <p>Hello! Welcome to RiantoChatBot, how can I help?</p>
+                <p>Hello! Welcome to RiantoChat, how can I help?</p>
             </div>
         </div>
 
